chore(docs): updated swagger
